// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render negative change in rate 1`] = `
Array [
  <span>
    Test-π/USD: 
    0.025
     
    <span
      style={
        Object {
          "color": "#fb9678",
        }
      }
    >
      -1.52%
    </span>
  </span>,
]
`;

exports[`render positive change in rate 1`] = `
Array [
  <span>
    Test-π/USD: 
    0.020
     
    <span
      style={
        Object {
          "color": "#00c292",
        }
      }
    >
      +2.1%
    </span>
  </span>,
]
`;
